# actix-playground

./: Cargo.toml  async-notes.md  backend-3-actix-notes.md  notes.md  qs.md
attempts/: Cargo.toml
attempts/src/: lib.rs
data/: Some([49, 51, 52, 50, 50, 57, 50, 52, 52]).json  Some([49, 51, 52, 50, 50, 57, 50, 52, 56]).json  Some([49, 51, 52, 50, 50, 57, 50, 52, 57]).json  Some([49, 51, 52, 50, 50, 57, 50, 53, 48]).json  Some([49, 51, 52, 50, 50, 57, 50, 53, 49]).json  Some([49, 51, 52, 50, 50, 57, 50, 53, 51]).json  Some([49, 51, 52, 50, 50, 57, 50, 53, 52]).json  Some([49, 51, 52, 50, 50, 57, 50, 53, 53]).json  Some([49, 51, 52, 50, 50, 57, 50, 53, 54]).json  Some([49, 51, 52, 50, 50, 57, 50, 53, 56]).json
playground/: AtrKafkaConsumer-notes.md  Cargo.toml  notes.md
playground/src/: main.rs  main_arb.rs  main_kfk.rs  main_srd.rs  main_trait_numbered.rs
playground/src/actors/: combo.rs  counter.rs  master.rs  mod.rs
rdkfk/: Cargo.toml
rdkfk/examples/: simple_consumer.rs
rdkfk/src/: main.rs
src/: main.rs
