[package]
name    = "actix-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix='0.13.0'

[workspace]
members = [
    "playground",
    "attempts",
    "sb-backend-3-actix",
]

[[bin]]
name  = "actix-playground"
test  = false
bench = false
