[package]
name = "playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix              = '0.13.0'
rand               = '0.8.5'
actix-rt           = '2.7.0'
attempts           = {path = '../attempts'}
sb-backend-3-actix = {path = '../sb-backend-3-actix'}

[[bin]]
name =  "main"
path = 'src/main.rs'

[[bin]]
name =  "main-arb"
path = "src/main_arb.rs"