[package]
name = "playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix              = '0.13.0'
rand               = '0.8.5'
actix-rt           = '2.7.0'
sb-backend-3-actix = {path = '../sb-backend-3-actix'}
rdkafka            = '0.28.0'

[[bin]]
name =  "main"          # <- This is the executable name
path = 'src/main.rs'    # <- This is the path to the executable

[[bin]]
name =  "main-arb"
path = "src/main_arb.rs"

[[bin]]
name =  "main-kfk"
path = "src/main_kfk.rs"

[[bin]]
name =  "trait-numbered"
path = "src/main_trait_numbered.rs"


