[package]
name = "rdkfk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = '0.28.0'
rand    = '0.8.5'
log     = '0.4.17'
futures = '0.3.21'
clap    = '3.1.18'
tokio   = { version =  '1.18.2', features = ['full']}

[[bin]]
name =  "rdkfk"
path = "src/main.rs"
